--- a/pages/header.html
+++ b/pages/header.html
@@ -134,8 +134,7 @@
                         </li>
 
                         <!-- Serviços Adicionais -->
-                        <li><a class="arrow" href="../additional-services.html">Vacinação<span
-                                    class="dropdown-arrow"></span></a>
+                        <li><a class="arrow" href="vacinacao.html">Vacinação<span class="dropdown-arrow"></span></a>
                             <ul class="dropdown">
                                 <li><a href="vacinacao.html#A">Adulto</a></li>
                                 <li><a href="vacinacao.html#B">Gravidez</a></li>
