--- a/pages/team-sing.html
+++ b/pages/team-sing.html
@@ -248,7 +248,7 @@
         // Função para exibir a consulta Cirurgia, esconder a pós-parto e atualizar o texto
         function showA() {
             nome.textContent = "Calisto Chemane"; // Atualiza o texto para "Calisto Chemane"
-            icone.style.backgroundImage = "url('../img/icons/atendimento.png')";
+            icone.style.backgroundImage = "url('../img/icons/heart.png')";
             tempo.textContent = "Connosco a ajudar famílias desde 2016."; // Atualiza o texto
             funcao.textContent = "Atendimento ao Paciente."; // Atualiza o texto
             paragrafo.innerHTML = "Estudante universitário no curso de Ciências de Informação Geográfica na Universidade Eduardo Mondlane em Maputo, Moçambique e formado em Atendimento ao Cliente pela Academia Negócios de Saúde, Portugal. <br><br> Com mais de 2 anos de experiência de atendimento ao paciente, orgulho-me de ter desenvolvido uma abordagem marcada pela simpatia, empatia, paciência e compreensão. Descobri uma verdadeira paixão por esta área de trabalho, transformando cada interação numa oportunidade de oferecer o meu melhor e criar conexões leais e genuínas, colocando sempre as necessidades dos pacientes em primeiro lugar.";
@@ -299,7 +299,7 @@
         function showE() {
             nome.textContent = "Katia Mabjaia"; // Atualiza o texto para "Calisto Chemane"
             funcao.textContent = "Atendimento ao Paciente.";
-            icone.style.backgroundImage = "url('../img/icons/medica geral.png')";
+            icone.style.backgroundImage = "url('../img/icons/heart.png')";
             tempo.textContent = "Connosco a ajudar famílias desde 2016."; // Atualiza o texto
             paragrafo.innerHTML = "Estudante universitária de Engenharia de Gestão de Recursos Petrolíferos na Universidade Técnica de Moçambique. <br> Com mais de 1 ano de experiência em atendimento ao público em diversas empresas e no ramo da hotelaria, decidi enveredar pela área do atendimento ao paciente. <br> Sempre tive o sonho de comunicar e um especial interesse pela área de ajudar o próximo. Acredito que a chave para um excelente atendimento ao paciente passa por saber escutar e ter empatia aliada a um grande profissionalismo."
             frase.innerHTML = "<b>«Sorriso, empatia, escuta ativa e eficácia valem mais do que mil palavras.»</b>";
@@ -310,8 +310,8 @@
         }
         function showF() {
             nome.textContent = "Ana Lusete Matlabe"; // Atualiza o texto para "Calisto Chemane"
-            funcao.textContent = "Técnica de Saúde Pública e Gestão Ambiental";
-            icone.style.backgroundImage = "url('../img/icons/medica geral.png')";
+            funcao.textContent = "Contabilidade";
+            icone.style.backgroundImage = "url('../img/icons/contabilidade.png')";
             tempo.textContent = "Connosco a ajudar famílias desde 2016."; // Atualiza o texto
             paragrafo.innerHTML = "Técnica de Saúde Pública e Gestão Ambiental pelo Instituto Politécnico de Empreendedorismo e Tecnologia (IPET) desde 2017 e Educadora de Infância pelo Ministério da Mulher e Ação Social desde 2011. <br> No seu currículo conta com uma vasta experiência de trabalho para várias ONGs como os Médicos Sem Fronteiras (MSF). <br> Apaixonada pela educação infantil inclusiva, teve a oportunidade de trabalhar em escolas para crianças com necessidades educativas especiais. <br> Percebendo a estigmatização de pessoas com doenças como o HIV e tuberculose, fundou grupos de apoio para pacientes e famílias, de forma informar e reforçar a importância do tratamento destes doentes. <br> Com uma mente inquisitiva, iniciou a sua formação em Contabilidade, entendendo que seria uma mais-valia na hora de procurar novas oportunidades de trabalho."
             frase.innerHTML = "<b>«Cuidar da tua saúde é uma prioridade para mim!»</b>";
@@ -335,7 +335,7 @@
         function showH() {
             nome.textContent = "Dra Joana Costa"; // Atualiza o texto para "Calisto Chemane"
             funcao.textContent = "Psicóloga Clínica";
-            icone.style.backgroundImage = "url('../img/icons/medica geral.png')";
+            icone.style.backgroundImage = "url('../img/icons/Pscologa.png')";
             tempo.textContent = "Connosco a ajudar famílias desde 2016."; // Atualiza o texto
             paragrafo.innerHTML = "Sou Psicóloga Clínica de formação, apaixonada pela mente humana em todas as suas facetas.  <br> Moçambicana e mãe de dois filhos lindos, desenvolvi um interesse especial pela intervenção psicológica na área materna, onde procuro contribuir para o bem-estar emocional e saúde mental das famílias num dos momentos mais marcantes das suas vidas. A Psicologia está presente em tudo o que faço, procuro aplicar este conhecimento para criar impacto positivo em todas as áreas da minha vida. Acredito que o acompanhamento psicológico pode ser transformador, promovendo uma vida mais equilibrada e saudável."
             frase.innerHTML = "<b>«A tua história é importante! Mereces atenção, amor, compreensão e bem-estar emocional. Estou aqui para ajudar-te enquanto percorres o teu caminho. »</b>";
@@ -370,8 +370,8 @@
         }
         function showK() {
             nome.textContent = "Dulce Covane"; // Atualiza o texto para "Calisto Chemane"
-            funcao.textContent = "Enfermeira especialista saúde materno-infantil";
-            icone.style.backgroundImage = "url('../img/icons/medica geral.png')";
+            funcao.textContent = "Higienização";
+            icone.style.backgroundImage = "url('../img/icons/Esterizacao.png')";
             tempo.textContent = "Connosco a ajudar famílias desde 2016."; // Atualiza o texto
             paragrafo.innerHTML = "Jovem dinâmica e focada no futuro profissional, começa o seu percurso laboral n’<i>A Clínica.</i> <br> Sempre teve o sonho de tirar um curso universitário de Enfermagem ou Contabilidade e conseguir ser uma pessoa independente. <br> Com esta oportunidade de trabalho pretende poupar dinheiro e conseguir entrar na faculdade no próximo ano.";
             frase.innerHTML = "<b>«Trabalho com afinco para poder deixar A Clínica impecável para receber os nossos pacientes.»</b>";
@@ -387,7 +387,7 @@
             tempo.textContent = "Connosco a ajudar famílias desde 2016."; // Atualiza o texto
             paragrafo.innerHTML = "Com mais de 15 anos de experiência em Moçambique, Portugal e além-fronteiras, é um Personal Trainer pronto para elevar os seus treinos a novos patamares! <br> As suas certificações e especializações abrangem desde treino de força e condicionamento físico, treino específico para gestantes e pós-parto, população sénior, recomposição corporal, pós-lesão e atletas. <br> Descubra as inúmeras possibilidades do treino personalizado online e melhore a sua saúde e alcance os seus objetivos com um treino específico, tendo em conta a sua individualidade, capacidades e limitações, com toda a qualidade e segurança."
             frase.innerHTML = "<b>«Trabalho com afinco para poder deixar A Clínica impecável para receber os nossos pacientes.»</b>";
-            profile.innerHTML = "<img src='../img/team/team-8.jpg' alt='Dra Joana Costas'>";
+            profile.innerHTML = "<img src='../img/team/team-14.jpg' alt='Dra Joana Costas'>";
 
             // Rolar para o topo suavemente
             window.scrollTo({ top: 0, behavior: 'smooth' });
