--- a/pages/footer.html
+++ b/pages/footer.html
@@ -55,7 +55,7 @@
                 <!-- Links -->
                 <h4 class="text-uppercase fw-bold text-white mb-2">links úteis</h4>
                 <p>
-                    <a href="#!" class="text-white">Apoio ao domicilio</a>
+                    <a href="domicilio.html" class="text-white">Apoio ao domicilio</a>
                 </p>
                 <p>
                     <a href="cursos.html" class="text-white">Cursos</a>
@@ -68,7 +68,7 @@
                     <a href="../galeria.html" class="text-white">Pedido de informação</a>
                 </p>
                 <p>
-                    <a href="#!" class="text-white">Primeiros Socorros</a>
+                    <a href="workshop-primeiros-socoros.html" class="text-white">Primeiros Socorros</a>
                 </p>
                 <p>
                     <a href="../humanitario.html" class="text-white">Trabalho humanitário</a>
@@ -78,7 +78,7 @@
                 </p>
 
                 <p>
-                    <a href="#!" class="text-white">Workshop</a>
+                    <a href="workshop-amament.html" class="text-white">Workshop</a>
                 </p>
             </div>
             <!-- Grid column -->
