--- a/header.html
+++ b/header.html
@@ -23,6 +23,85 @@
 </div>
 
 <div class="container">
+    <div class="mobile-offside"></div>
+    <nav id="navbar_main" class="mobile-offcanvas navbar navbar-expand-lg navbar-dark bg-primary">
+        <div class="offcanvas-header">
+            <div class="header__logo">
+                <a href="../index.html"><img src="../img/logo.png" style="width: 80%;" alt=""></a>
+            </div>
+        </div>
+        <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+                <a class="arrow dropdown-toggle" href="#" data-toggle="dropdown">A Clínica</a>
+                <ul class="dropdown-menu pt-0">
+                    <li><a class="sub-arrow" href="about.html">Sobre Nós</a></li>
+                    <li><a class="sub-arrow" href="team.html">Equipa</a></li>
+                    <li><a class="sub-arrow" href="humanitario.html">O nosso trabalho humanitário</a></li>
+                    <li><a class="sub-arrow" href="info.html">Pedido de informação/ Agendamento</a></li>
+                </ul>
+            </li>
+        </ul>
+        <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+                <a class="arrow dropdown-toggle" href="#" data-toggle="dropdown">Consultas</a>
+                <ul class="dropdown-menu pt-0">
+                    <li><a class="sub-arrow" href="pages/amament-pre-parto.html#pre">Consulta Pré-parto</a></li>
+                    <li><a class="sub-arrow" href="pages/amament-pre-parto.html#pos">Consulta Pós-parto</a></li>
+                    <li><a class="sub-arrow" href="pages/viajante.html">Medicina do Viajante</a></li>
+                </ul>
+            </li>
+        </ul>
+        <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+                <a class="arrow dropdown-toggle" href="#" data-toggle="dropdown">Vacinação</a>
+                <ul class="dropdown-menu pt-0">
+                    <li><a class="sub-arrow" href="pages/vacinacao.html#A">Adulto</a></li>
+                    <li><a class="sub-arrow" href="pages/vacinacao.html#B">Gravidez</a></li>
+                    <li><a class="sub-arrow" href="pages/vacinacao.html#D">Infantil</a></li>
+                    <li><a class="sub-arrow" href="pages/vacinacao.html#E">Viajante</a></li>
+                </ul>
+            </li>
+        </ul>
+        <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+                <a class="arrow dropdown-toggle" href="#" data-toggle="dropdown">Apoio ao domicílio</a>
+                <ul class="dropdown-menu pt-0">
+                    <li><a class="sub-arrow" href="pages/domicilio.html">Amamentação</a></li>
+                    <li><a class="sub-arrow" href="pages/domicilio.html#conseferm">Enfermagem</a></li>
+                    <li><a class="sub-arrow" href="pages/teste.html#A">Teste do pezinho</a></li>
+                </ul>
+            </li>
+        </ul>
+        <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+                <a class="arrow dropdown-toggle" href="#" data-toggle="dropdown">Workshops</a>
+                <ul class="dropdown-menu pt-0">
+                    <li><a class="sub-arrow" href="pages/workshop.html">Workshops/Grupos de Apoio</a></li>
+                    <li><a class="sub-arrow" href="pages/workshop-amament.html">Amamentação</a></li>
+                    <li><a class="sub-arrow" href="pages/workshop-bebe.html">Bebé</a></li>
+                    <li><a class="sub-arrow" href="pages/workshp-gravidez.html">Gravidez</a></li>
+                    <li><a class="sub-arrow" href="pages/worshop-Parentalidade.html">Introdução alimentar</a></li>
+                    <li><a class="sub-arrow" href="pages/worshop-Parentalidade.html">Parentalidade</a></li>
+                    <li><a class="sub-arrow" href="pages/Workshop-pediatria.html">Pediatria</a></li>
+                    <li><a class="sub-arrow" href="pages/workshop-primeiros-socoros.html">Primeiros Socorros
+                            Pediátricos</a></li>
+                </ul>
+            </li>
+        </ul>
+        <div class="offcanvas__btn mt-4">
+            <a href="#" class="primary-btn"><i class="fa fa-lock"></i> Área Reservada</a>
+        </div>
+        <ul class="offcanvas__widget">
+            <li><i class="fa fa-phone"></i> +258 84 869 7194</li>
+            <li><i class="fa fa-map-marker"></i> Edifício ou Shopping 24, Avenida 24 de Julho, Loja 20</li>
+            <li><i class="fa fa-clock-o"></i> Seg a Sex 8:00 às 18:00 | Sab: 9h às 12h</li>
+        </ul>
+        <div class="offcanvas__social">
+            <a href="#"><i class="fa fa-facebook"></i></a>
+            <a href="#"><i class="fa fa-instagram"></i></a>
+            <a href="#"><i class="fa fa-whatsapp"></i></a>
+        </div>
+    </nav>
     <div class="row">
         <div class="col-lg-2">
             <div class="header__logo">
@@ -37,7 +116,7 @@
                         <!-- <li class="active"><a class="arrow" href="index.html">INÍCIO</a></li> -->
 
                         <!-- A Clínica -->
-                        <li><a class="arrow" href="about.html">A Clínica <span class="dropdown-arrow"></span></a>
+                        <li><a class="arrow">A Clínica <span class="dropdown-arrow"></span></a>
                             <ul class="dropdown">
                                 <li><a href="about.html">Sobre Nós</a></li>
                                 <li><a href="team.html">Equipa</a></li>
@@ -228,7 +307,8 @@
             </div>
         </div>
     </div>
-    <div class="canvas__open">
+    <button data-trigger="#navbar_main" class=" menucanva d-lg-none" type="button">
         <i class="fa fa-bars"></i>
-    </div>
+    </button>
+
 </div>
