--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="set-bg" data-setbg="img/bg1.png"
-                        style="background-image: url(&quot;img/bg1.png&quot;);height: 30rem;border-radius: 10px;display: flex;justify-content: center; padding-top: 2rem;">
+                        style="background-image: url(&quot;img/bg1.png&quot;); border-radius: 10px;display: flex;justify-content: center; padding-top: 2rem;">
 
                         <div class="col-lg-10">
                             <div class="row">
@@ -319,7 +319,7 @@
                                             <br>
                                         </p>
                                     </div>
-                                    <div class="load__more">
+                                    <div class="load__more mb-4">
                                         <a href="about.html" class="white-btn">Saiba mais</a>
                                     </div>
                                 </div>
@@ -343,7 +343,7 @@
     <!-- Consultation Section End -->
 
     <!-- Seção de Testemunhos Fim -->
-    <section class="blog spad mt-5">
+    <section class="blog spad mt-5 agenda">
         <div class="container">
             <!-- Título da Seção -->
             <div class="row">
