--- a/about.html
+++ b/about.html
@@ -25,6 +25,13 @@
     <link rel="stylesheet" href="css/style.css" type="text/css">
 
     <style>
+        @media all and (max-width:992px) {
+            .consultation__video {
+                height: 200px !important;
+                width: 369px !important;
+            }
+        }
+
         b {
             color: #d6a294;
             font-weight: 400;
@@ -232,7 +239,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12 d-flex justify-content-center">
-                    <a href="video/a9b14eab-834f-4e54-b669-3999e49f2d60.mp4" class="play-btn video-popup align-content-center">
+                    <a href="video/a9b14eab-834f-4e54-b669-3999e49f2d60.mp4"
+                        class="play-btn video-popup align-content-center">
                         <div class="consultation__video set-bg" data-setbg="video/video-cover.jpg">
                             <i class="fa fa-play"></i>
                         </div>
