--- a/about.html
+++ b/about.html
@@ -180,7 +180,7 @@
                         </div>
                     </div>
                     <!-- Hero Section Begin -->
-                    <section class="hero spad set-bg mt-4" data-setbg="img/hero-2bg.jpg">
+                    <section class="hero about_hero spad set-bg mt-4" data-setbg="img/hero-2bg.jpg">
                         <div class="container">
                             <div class="row">
                                 <div class="col-lg-6 mt-2 ml-4">
@@ -201,7 +201,7 @@
 
 
     <!-- Hero Section Begin -->
-    <section class="hero set-bg mt-8" data-setbg="img/blog/details/blog-hero11.jpg" style='background-image: url("img/blog/details/blog-hero.jpg"); color: ffff;
+    <section class=" destaque set-bg mt-8" data-setbg="img/blog/details/blog-hero11.jpg" style='background-image: url("img/blog/details/blog-hero.jpg"); color: ffff;
         height: 32rem;'>
         <div class="container">
             <div class="row">
