--- a/pages/team-sing.html
+++ b/pages/team-sing.html
@@ -111,8 +111,8 @@
                 style="background-image: url('../img/bg2.png'); background-repeat: no-repeat;background-size: cover;background-position: top center;">
                 <!-- Seção de Texto -->
                 <div class="col-lg-6 col-md-6 col-12 text-section d-flex flex-column justify-content-center">
-                    <div class=" m-2">
-                        <div class="d-flex align-items-end ">
+                    <div class=" m-2 team_head">
+                        <div class="team_content">
                             <div id="icone"></div>
                             <h2 class="text-white ml-2" id="funcao"><img alt="icon"></h2>
                         </div>
